<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataGatherer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="homework_text">Dhawal Srivastava\nECE573 hw02</string>
    <string name="button_text">Start</string>
    <string name="button_text1">Email</string>
    <string name="pothole">PotHole!</string>
    <string name="RecordTopic">Showing Values Fetched From Accelerometer</string>
    <string name="initial_value">0</string>
    <string name="One">1</string>
    <string name="Speed">Speed</string>
    <string name="SmoothRoad">Smooth Road</string>
        <string name="SpeedBump">Speed Bump</string>
        <string name="CurbHit">Curb Hit</string>
            <string name="HighSpeed">High Speed</string>
            <string name="LowSpeed">Low Speed</string>
            <string name="PhoneDrop">Phone Drop</string>
        
</resources>
